<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="500dp"
    android:layout_height="match_parent"
    android:gravity="center">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"

        android:gravity="center"
        android:padding="12dp">

        <TextView
            android:id="@+id/tv_begin_date"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/begin_date"/>
        <TextView
            android:id="@+id/tv_begin_date_text"
            android:layout_marginTop="4dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <TextView
            android:id="@+id/tv_sort_order"
            android:layout_marginTop="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sort_order"/>
        <Spinner
            android:id="@+id/sp_sort"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:prompt="@string/sort_prompt"
            android:entries="@array/sort_array"/>

        <TextView
            android:id="@+id/tv_news_values"
            android:layout_marginTop="24dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/news_desks_values" />
        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="4dp">
            <CheckBox android:id="@+id/checkbox_art"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/arts_value" />
            <CheckBox android:id="@+id/checkbox_fashion"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/fashion_value" />
            <CheckBox android:id="@+id/checkbox_sport"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/sport_value" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/btn_save_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/save_filters"/>


</LinearLayout>